<resources>
    <string name="app_name">Nintendo Network</string>

    <!--- FRAGMENT INICIO SESION -->
    <string name="bienvenido">¡Bienvenido a Nintendo Network!</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="reg">¿Aún no te has registrado?</string>
    <string name="crea">Crea una cuenta</string>
    <string name="inicio">Se ha iniciado sesión correctamente</string>
    <string name="datosInc">El email o la contraseña no son correctos</string>
    <string name="espere">Por favor, espera…</string>


    <!--- FRAGMENT CREAR CUENTA -->
    <string name="crear">CREAR CUENTA</string>
    <string name="user">Usuario</string>
    <string name="contraMin">Contraseña (min. 8 caracteres)</string>
    <string name="conf">Confirma contraseña</string>
    <string name="crearB">Crear</string>
    <string name="checkBox">He leído y acepto los Términos de Uso y la Política de Privacidad</string>
    <string name="creada">Tu cuenta se ha creado correctamente</string>
    <string name="vacios">¡Tienes que introducir todos los campos!</string>
    <string name="userVac">¡Tienes que introducir el usuario!</string>
    <string name="emailNo">El formato del correo no es válido</string>
    <string name="passDeb">La contraseña es muy corta</string>
    <string name="passNo">Las contraseñas no coinciden</string>
    <string name="existe">¡Ese correo ya está registrado!</string>


    <!--- FRAGMENT TERMINOS -->
    <string name="terms">TERMINOS</string>
    <string name="textTerms">Al registrarte y utilizar la aplicación aceptas los siguientes términos del servicio:\n\n1.- El tratamiento de los datos de inicio de sesión es seguro, de forma que el desarrollador no tiene la capacidad de ver o administrar las contraseñas de los usuarios.\n\n2.- El desarrollador se reserva el derecho de suspender las cuentas de aquellos usuarios que hagan un uso indebido de la aplicación, como la inclusión de imágenes que no correspondan o textos con contenido ofensivo.\n\n3.- Los usuarios son responsables de que la información que publiquen en la aplicación sea veraz, correcta y esté bien escrita, siguiendo las reglas de puntuación.\n\n4.- Es posible que se guarde la información sobre la dirección IP o el modelo del dispositivo para poder aplicar las restricciones a los usuarios e impedir la creación de cuentas nuevas.\n\n5.- La aplicación es una versión final, pero puede contener errores, sobre todo a la hora de hacer operaciones con la base de datos. En caso de que ocurra algún cierre inesperado de la app, rogaría que me escribas detallando lo que querías hacer cuando ocurrió el fallo (borrando una valoración, un juego…).\n\n6.- No se solicita ningún permiso al usuario, de forma que la aplicación no puede ni va a acceder al almacenamiento, llamadas, ubicación o cualquier otra función que involucre datos personales.\n\n7.- No copyright infringement intended. All rights are reserved to the original owners, Nintendo and the other trademarks that may appear in-app.</string>


    <!--- FRAGMENT FEED -->
    <string name="feed">Feed</string>
    <string name="plus">+</string>


    <!--- FRAGMENT JUEGO -->
    <string name="nuevo">NUEVO JUEGO</string>
    <string name="titulo">Título del juego</string>
    <string name="tituloeT">Título</string>
    <string name="genero">Género</string>
    <string name="anioLanz">Año de lanzamiento</string>
    <string name="anio">Año</string>
    <string name="descr">Descripción</string>
    <string name="caratula">URL de la carátula</string>
    <string name="url">URL</string>
    <string name="fechaInc">La fecha introducida no es correcta</string>
    <string name="noUrl">No has introducido una URL válida</string>
    <string name="exis">¡Ese juego ya se ha añadido!</string>
    <string name="aniadido">Has añadido el juego correctamente</string>


    <!--- FRAGMENT DETALLE -->
    <string name="val">Valoración</string>
    <string name="tuVal">Tu valoración</string>
    <string name="defVal">0.0 / 5</string>
    <string name="ceroPers">- / 5</string>
    <string name="opin">OPINIONES</string>
    <string name="env">Enviar</string>
    <string name="borra">Borrar</string>
    <string name="tick">✓</string>
    <string name="confirm">Confirmación</string>
    <string name="seguro">¿Estás seguro de que quieres eliminar tu valoración del juego</string>
    <string name="seguroJue">Vas a eliminar el juego</string>
    <string name="seguroJue2">. Se perderán todos sus datos y las valoraciones registradas hasta el momento. ¿Quieres continuar?</string>
    <string name="siVal">Sí</string>
    <string name="noVal">No</string>
    <string name="regVal">Tu valoración se ha registrado</string>
    <string name="elimVal">Se ha eliminado tu valoración</string>
    <string name="error">Error</string>
    <string name="noElimJue">No puedes eliminar el juego porque ya han valorado más de</string>
    <string name="noElimJue2">personas. Ponte en contacto con el desarrollador.</string>
    <string name="enten">Entendido</string>
    <string name="elimJue">Se ha eliminado el juego correctamente</string>


    <!--- FRAGMENT OPINIONES -->
    <string name="vaya">¡Vaya! Parece que no hay ninguna opinión registrada…</string>
    <string name="escrOpi">Escribe aquí tu opinión</string>
    <string name="nadaOpi">¡No has escrito nada!</string>
    <string name="aniadida">Se ha añadido tu opinión</string>
    <string name="yaOpi">¡Ya has opinado sobre este juego!</string>
    <string name="elimOpi">¿Quieres eliminar tu opinión del juego</string>


    <!--- FRAGMENT USER -->
    <string name="usuario">USUARIO</string>
    <string name="info">Aquí puedes gestionar la información de tu cuenta, como el usuario y el correo electrónico.</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>


    <!--- FRAGMENT MODIFICA -->
    <string name="modDatos">Aquí puedes modificar tus datos</string>
    <string name="puntos">· · · · · · · ·</string>
    <string name="userMod">Se ha modificado el usuario correctamente</string>
    <string name="contraMod">La contraseña se ha modificado correctamente</string>
    <string name="nada">¡No hay nada para modificar!</string>
    <string name="errorContra">No se puede cambiar la contraseña en este momento</string>
    <string name="errorUsu">El usuario no se puede modificar en este momento</string>


    <!--- FRAGMENT ELIMINA -->
    <string name="mensElim">¿Estás seguro de que quieres eliminar la cuenta? Esta acción no se puede deshacer y perderás el acceso a la aplicación.</string>
    <string name="si">Sí, quiero eliminarla</string>
    <string name="no">No, llévame a la feed</string>
    <string name="selec">¡Tienes que seleccionar una opción!</string>
    <string name="elimBien">La cuenta se ha eliminado correctamente</string>
    <string name="cancel">Se ha cancelado la eliminación</string>
    <string name="noElim">En este momento no se puede eliminar tu cuenta</string>
</resources>